[package]
name = "actix_ws"
version = "0.1.0"
authors = ["Voodlaz <47495939+Voodlaz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"

actix-web = "3"
actix-web-actors = "3"

diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-files = "0.3"
tera = "1.0"

log = "0.4.0"
env_logger = "0.8.2"
